results/90a79c924bfdc2abb6ee464c7bca28f3/err_code.txt
  File "./pyfile.py", line 19
    runitem = MCMCWrapper({fitarraystring}, emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 90a79c924bfdc2abb6ee464c7bca28f3, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
